tests/ui/type-alias-impl-trait/ice-failed-to-resolve-instance-for-110696.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:41:6
   |
LL | impl<T: MyFrom<Phantom2<DummyT<U>>>, U> MyIndex<DummyT<T>> for Scope<U> {
   |      ^ unconstrained type parameter

error: item does not constrain `DummyT::{opaque#0}`, but has it in its signature
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:28:8
   |
LL |     fn new() -> Self {
   |        ^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:20:18
   |
LL | type DummyT<T> = impl F;
   |                  ^^^^^^

error: item does not constrain `DummyT::{opaque#0}`, but has it in its signature
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:44:8
   |
LL |     fn my_index(self) -> Self::O {
   |        ^^^^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:20:18
   |
LL | type DummyT<T> = impl F;
   |                  ^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0207`.
